# bitbadges-cosmwasm-bindings

./: .gitignore  Cargo.toml  README.md
contracts/contract_example/: Cargo.toml  build.sh
contracts/contract_example/src/: contract.rs  msg.rs
contracts/delete_collection/: Cargo.toml  build.sh  delete_collection.wasm  native_tester.wasm
contracts/delete_collection/src/: contract.rs  msg.rs  query.rs
contracts/register_addresses/: Cargo.toml  build.sh  delete_collection.wasm  native_tester.wasm
contracts/register_addresses/src/: contract.rs  msg.rs  query.rs
integration_tests/: README.md  test_native.sh  test_nft.sh
integration_tests/native_msgs/: burn_msg.json  delegate_msg.json  execute_msg.json  query_balance.json  send_msg.json  undelegate_msg.json
schema/: cudos_msg.json  cudos_query.json  denom_response.json
