[package]
name = "contract_example"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/bitbadges/bitbadges-cosmwasm-bindings"
homepage = "https://www.bitbadges.io/"
documentation = "https://docs.bitbadges.io/"
readme = "README.md"


[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0-beta", features = ["staking", "stargate"] }
cosmwasm-storage = { version = "1.0.0-beta" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
thiserror = "1.0"

#TODO: For now we use the local package because we have it in our workspace
bitbadges-cosmwasm = { path = "../../packages/bitbadges-cosmwasm" }
# bitbadges-cosmwasm = { version = "0.0.4" }

[dev-dependencies]
# we only need to enable this if we use integration tests
cosmwasm-schema = { version = "1.0.0-beta" }
